--- a/.github/workflows/openwrt_lean.yml
+++ b/.github/workflows/openwrt_lean.yml
@@ -21,9 +21,9 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
-        sudo -E apt-get -y autoremove --purge
-        sudo -E apt-get clean
+        #sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
+        #sudo -E apt-get -y autoremove --purge
+        #sudo -E apt-get clean
 
     - name: Clone source code
       run: |
@@ -52,7 +52,8 @@ jobs:
     - name : package
       run: |
         find openwrt/ -name "*.config" | xargs -i zip -r {}.zip {}
-        find openwrt/ -name "*.zip*" | xargs -i mv -f {} ./artifact/
+        cp openwrt/*.zip openwrt/bin
+        #find openwrt/ -name "*.zip*" | xargs -i mv -f {} ./artifact/
                 
     - name : Upload artifact
       uses: actions/upload-artifact@master
