--- a/.github/workflows/openwrt_lean.yml
+++ b/.github/workflows/openwrt_lean.yml
@@ -21,25 +21,25 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
-        sudo -E apt-get -y autoremove --purge
-        sudo -E apt-get clean
+        #sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
+        #sudo -E apt-get -y autoremove --purge
+        #sudo -E apt-get clean
 
     - name: Clone source code
       run: |
         git clone https://github.com/openwrt/openwrt.git
-        git clone https://github.com/coolsnowwolf/lede.git
-        cd openwrt
-        git checkout v19.07.2
-        cd package
-        ln -s ../../lede/package/lean/ lean
+        #git clone https://github.com/coolsnowwolf/lede.git
+        #cd openwrt
+        #git checkout v19.07.2
+        #cd package
+        #ln -s ../../lede/package/lean/ lean
         
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
         echo src-git lienol https://github.com/Lienol/openwrt-package >> feeds.conf.default
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
+        #./scripts/feeds update -a
+        #./scripts/feeds install -a
         
     - name: Configuration Customization - Build_x86_64
       env:
@@ -47,12 +47,12 @@ jobs:
       run: |
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         #chmod +x ./customize.sh && ./customize.sh
-        cd openwrt && make defconfig
+        #cd openwrt && make defconfig
         
     - name : package
       run: |
-        find openwrt/ -name "*.config" | xargs -i zip -r {}.zip {}
-        cp openwrt/*.zip openwrt/bin
+        #find openwrt/ -name "*.config" | xargs -i zip -r {}.zip {}
+        cp openwrt/*.config openwrt/bin
         #find openwrt/ -name "*.zip*" | xargs -i mv -f {} ./artifact/
                 
     - name : Upload artifact
