--- a/.github/workflows/openwrt_lean.yml
+++ b/.github/workflows/openwrt_lean.yml
@@ -21,9 +21,12 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
+        sudo -E apt-get install subversion g++ zlib1g-dev build-essential git python python3 python3-distutils libncurses5-dev gawk gettext device-tree-compiler libuv-dev
+        sudo apt install unzip file libssl-dev wget libelf-dev ecj fastjar java-propose-classpath libncursesw5-dev asciidoc binutils autoconf automake libtool autopoint
+	      sudo apt install bzip2 patch unzip lib32gcc1 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libc6-dev-i386 libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
+        #sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
 
     - name: Clone source code
       run: |
@@ -41,7 +44,7 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         
-    - name: Configuration Customization - Build_x86_64
+    - name: Configuration Customization and build
       env:
         CONFIG_FILE: '2020-03-24.config'
       run: |
