--- a/.github/workflows/openwrt_lean.yml
+++ b/.github/workflows/openwrt_lean.yml
@@ -4,9 +4,9 @@ on:
   release:
     types: [published]
 
-  push:
-    branches: 
-      - master
+  #push:
+  #  branches: 
+  #    - master
 
 jobs:
   build:
@@ -21,26 +21,24 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get update
-        sudo -E apt-get install subversion g++ zlib1g-dev build-essential git python python3 python3-distutils libncurses5-dev gawk gettext device-tree-compiler libuv-dev
-        sudo apt install unzip file libssl-dev wget libelf-dev ecj fastjar java-propose-classpath libncursesw5-dev asciidoc binutils autoconf automake libtool autopoint
-        sudo apt install bzip2 patch unzip lib32gcc1 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libc6-dev-i386 libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev
+        sudo apt install subversion g++ zlib1g-dev build-essential git python python3 python3-distutils libncurses5-dev gawk gettext \
+                 unzip file libssl-dev wget libelf-dev ecj fastjar java-propose-classpath libncursesw5-dev
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
-        #sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
 
     - name: Clone source code
       run: |
         git clone https://github.com/openwrt/openwrt.git
-        git clone https://github.com/coolsnowwolf/lede.git
+        #git clone https://github.com/coolsnowwolf/lede.git
         cd openwrt
         git checkout v19.07.2
-        cd package
-        ln -s ../../lede/package/lean/ lean
+        #cd package
+        #ln -s ../../lede/package/lean/ lean
         
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
-        echo src-git lienol https://github.com/Lienol/openwrt-package >> feeds.conf.default
+        #echo src-git lienol https://github.com/Lienol/openwrt-package >> feeds.conf.default
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         
@@ -60,8 +58,8 @@ jobs:
     - name: Build firmware
       working-directory: ./openwrt
       run: |
-        echo -e "$(nproc) thread build."
-        make -j$(nproc) V=s
+        #echo -e "$(nproc) thread build."
+        make -j1 V=s
 
     - name : Upload artifact
       uses: actions/upload-artifact@master
