--- a/openwrt_lean.yml
+++ b/openwrt_lean.yml
@@ -21,26 +21,28 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex node-uglify gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx-ucl libelf-dev autoconf automake libtool autopoint device-tree-compiler libuv-dev
+        sudo apt install subversion g++ zlib1g-dev build-essential git python python3 python3-distutils libncurses5-dev gawk gettext \
+                 unzip file libssl-dev wget libelf-dev ecj fastjar java-propose-classpath libncursesw5-dev
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
     - name: Clone source code
       run: |
         git clone https://github.com/openwrt/openwrt.git
+        #git clone https://github.com/coolsnowwolf/lede.git
+        cd openwrt
         git checkout v19.07.2
-        git clone https://github.com/coolsnowwolf/lede.git
-        cd openwrt/package
-        ln -s ../../lede/package/lean/ lean
+        #cd package
+        #ln -s ../../lede/package/lean/ lean
         
     - name: Update & Install feeds
       working-directory: ./openwrt
       run: |
-        echo src-git lienol https://github.com/Lienol/openwrt-package >> feeds.conf.default
+        #echo src-git lienol https://github.com/Lienol/openwrt-package >> feeds.conf.default
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         
-    - name: Configuration Customization - Build_x86_64
+    - name: Configuration Customization and build
       env:
         CONFIG_FILE: '2020-03-24.config'
       run: |
@@ -48,10 +50,17 @@ jobs:
         #chmod +x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig
         
-    - name : package
+    - name: Download package
+      working-directory: ./openwrt
       run: |
-        tar zcvf openwrt/bin/1.tar.gz openwrt/.config
+        make download -j$(nproc)
         
+    - name: Build firmware
+      working-directory: ./openwrt
+      run: |
+        #echo -e "$(nproc) thread build."
+        make -j1 V=s
+
     - name : Upload artifact
       uses: actions/upload-artifact@master
       with:
