--- a/.github/workflows/openwrt_r_friendlywrt.yml
+++ b/.github/workflows/openwrt_r_friendlywrt.yml
@@ -72,8 +72,30 @@ jobs:
         cd friendlywrt-h5/friendlywrt
         make -j1 V=s
 
-    - name : Upload artifact
+    - name: Build SD img
+      run: |
+        cd friendlywrt-h5
+        sed -i '130,150 {/build_friendlywrt/d}' scripts/build.sh
+        ./build.sh nanopi_r1s.mk
+
+    - name: Zip Files
+      run: |
+        find friendlywrt-h5/out/ -name "FriendlyWrt_*img*" | xargs -i zip -r {}.zip {}
+          
+    - name: Assemble Artifact
+      run: |
+        rm -rf ./artifact/
+        mkdir -p ./artifact/
+        find friendlywrt-h5/out/ -name "FriendlyWrt_*img.zip*" | xargs -i mv -f {} ./artifact/
+          
+    - name: Upload Artifact
       uses: actions/upload-artifact@master
       with:
-        name: OpenWrt_friendlywrt
-        path: friendlywrt-h5/friendlywrt/bin
+        name: FriendlyWrt_NanoPi-R1S H5
+        path: ./artifact/
+
+    #- name : Upload artifact
+    #  uses: actions/upload-artifact@master
+    #  with:
+    #    name: OpenWrt_fr
+    #    path: friendlywrt-h5/friendlywrt/bin
