--- a/.github/workflows/openwrt_r_friendlywrt.yml
+++ b/.github/workflows/openwrt_r_friendlywrt.yml
@@ -24,8 +24,8 @@ jobs:
         sudo apt install subversion g++ zlib1g-dev build-essential git python python3 python3-distutils libncurses5-dev gawk gettext \
                  unzip file libssl-dev wget libelf-dev ecj fastjar java-propose-classpath libncursesw5-dev
         wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
-        #sudo -E apt-get -y autoremove --purge
-        #sudo -E apt-get clean
+        sudo -E apt-get -y autoremove --purge
+        sudo -E apt-get clean
         git clone https://github.com/friendlyarm/repo
         sudo cp repo/repo /usr/bin/
 
@@ -49,7 +49,7 @@ jobs:
     - name: Update & Install feeds
       run: |
         #echo src-git lienol https://github.com/Lienol/openwrt-package >> feeds.conf.default
-        cp openwrt_feeds friendlywrt-h5/friendlywrt/feeds.conf.default
+        #cp openwrt_feeds friendlywrt-h5/friendlywrt/feeds.conf.default
         cd friendlywrt-h5/friendlywrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
